# button-gate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  features.md
docs/adr/: 001-rev2-architecture.md
docs/planning/: roadmap.md
docs/planning/action-plans/: AP-002-gatekeeper-fsm-setup.md  AP-003-mode-handlers.md
docs/planning/action-plans/archive/: AP-001-fsm-engine.md  AP-002-gatekeeper-fsm-setup.md  AP-004-neopixel-driver.md
docs/planning/decision-records/: 001-rev2-architecture.md  002-status-word-consolidation.md  003-fsm-state-management.md  004-analog-cv-input.md
docs/planning/decision-records/archive/: 001-rev2-architecture.md
docs/planning/feature-designs/: FDP-001-bootloader.md  FDP-002-rename-gatekeeper.md  FDP-003-eeprom-wear-leveling.md  FDP-004-state-machine.md  FDP-005-neopixel-led-feedback.md  FDP-006-status-bitmasks.md  FDP-008-watchdog-timer.md  FDP-010-simulator-architecture-refactor.md  FDP-011-simulator-socket-architecture.md  FDP-012-ironclad-simulator-frontend.md  FDP-013-firmware-size-optimization.md  FDP-014-fsm-callbacks-and-calibration.md
docs/planning/feature-designs/archive/: FDP-001-app-init.md  FDP-007-x86-simulator.md  FDP-008-watchdog-timer.md  FDP-009-simulator-enhancements.md
include/: app_init.h  hal.h  startup.h
include/config/: mode_config.h
include/controller/: io_controller.h
include/core/: coordinator.h
include/events/: events.h
include/fsm/: events.h
include/hardware/: hal.h  hal_interface.h
include/input/: button.h
include/modes/: mode_handlers.h
include/output/: cv_output.h  led_feedback.h
include/state/: mode.h
include/utility/: delay.h
scripts/: size_report.sh
sim/: CMakeLists.txt  command_handler.c  command_handler.h  cv_source.c  cv_source.h  input_source.c  input_source.h  sim_hal.c  sim_hal.h  sim_main.c  sim_neopixel.c  sim_state.c  sim_state.h  socket_server.c  socket_server.h
sim/render/: render.h  render_batch.c  render_json.c  render_terminal.c
sim/schema/: sim_state_v1.json
sim/scripts/: test_gate_mode.gks  test_menu_toggle.gks  test_mode_change.gks
src/: CMakeLists.txt  app_init.c  hal.c  main.c  startup.c
src/controller/: CMakeLists.txt  io_controller.c
src/core/: CMakeLists.txt  coordinator.c
src/events/: CMakeLists.txt  events.c
src/fsm/: CMakeLists.txt  events.c  fsm.c
src/hardware/: CMakeLists.txt  hal.c
src/input/: CMakeLists.txt  button.c
src/modes/: CMakeLists.txt  mode_handlers.c
src/output/: CMakeLists.txt  cv_output.c  led_feedback.c  neopixel.c
src/state/: CMakeLists.txt  mode.c
src/utility/: CMakeLists.txt  delay.c
test/unit/: CMakeLists.txt  unit_tests.c
test/unit/app_init/: test_app_init.h
test/unit/button/: test_button.h
test/unit/controller/: test_controller.h
test/unit/core/: test_coordinator.h
test/unit/example/: test_example.h
test/unit/fsm/: test_events.h  test_fsm.h  test_mode_handlers.h
test/unit/input/: test_button.h
test/unit/mocks/: mock_hal.c  mock_hal.h  mock_neopixel.c  mock_neopixel.h
test/unit/output/: test_cv_output.h  test_led_animation.h  test_led_feedback.h  test_neopixel.h
test/unit/state/: test_mode.h
test/unit/utility/: test_struct_sizes.h
